--- a/index.html
+++ b/index.html
@@ -170,11 +170,9 @@
 			<p>Estos proyectos ya vieron la luz</p>
 			<div class="descriptimg">
 				<div class="sample">
-					<img class='img selected' data-project='key' src="../img/samples/sites/sitethree.png" alt="Imagen sitio">
-					<img class='img' data-project='bee' src="../img/samples/sites/sitesix.png" alt="Imagen sitio">
-					<img class='img' data-project='crow' src="../img/samples/sites/sitetwo.png" alt="Imagen sitio">
-					<img class='img' data-project='fox' src="../img/samples/sites/sitefour.png" alt="Imagen sitio">
-					<img class='img' data-project='polygon' src="../img/samples/sites/sitefive.png" alt="Imagen sitio">
+					<img class='img' data-project='bee' src="img/samples/sites/sitesix.png" alt="Imagen sitio">
+					<img class='img' data-project='crow' src="img/samples/sites/sitetwo.png" alt="Imagen sitio">
+					<img class='img selected' data-project='fox' src="img/samples/sites/sitefour.png" alt="Imagen sitio">
 				</div>
 				<nav class="sampleviews">
 					<ul>
