--- a/pages/who.html
+++ b/pages/who.html
@@ -3,9 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="icon" type="image/png" href="img/favico.png">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Cabin:400,400i" rel="stylesheet">  
 	<link rel="stylesheet" type="text/css" href="../stylesheets/general.css">
 	<link rel="stylesheet" type="text/css" href="../stylesheets/pages.css">
+	<link rel="stylesheet" type="text/css" href="../stylesheets/mobile.css">
 	<title>Quién</title>
 </head>
 <body class="who">
@@ -71,6 +73,48 @@
 								<p>The path of the righteous</p>
 							</div>
 						</li>
+						<li>
+							<div class="facts">
+								<p>The path of the righteous</p>
+							</div>
+						</li>
+						<li>
+							<div class="facts">
+								<p>The path of the righteous</p>
+							</div>
+						</li>
+					</ul>
+				</nav>
+				<nav class="mobifunfacts">
+					<ul>
+						<li>
+							<div class="facts">
+								<p>The path of the righteous</p>
+							</div>
+						</li>
+						<li>
+							<div class="facts">
+								<p>The path of the righteous</p>
+							</div>
+						</li>
+					</ul>
+				</nav>
+				<nav class="mobifunfacts">
+					<ul>
+						<li>
+							<div class="facts">
+								<p>The path of the righteous</p>
+							</div>
+						</li>
+						<li>
+							<div class="facts">
+								<p>The path of the righteous</p>
+							</div>
+						</li>
+					</ul>
+				</nav>
+				<nav class="mobifunfacts">
+					<ul>
 						<li>
 							<div class="facts">
 								<p>The path of the righteous</p>
