--- a/pages/how.html
+++ b/pages/how.html
@@ -33,12 +33,9 @@
 			</div>
 		</div>
 		<div class="levelone whobox">
-			<h2>MI NOMBRE ES JONATAN LIPNER...</h2>
+			<h2>UNIENDO EL DISEÑO CON EL DESARROLLO</h2>
 			<div class="bodytext">
-				<p>Soy un diseñador y desarrollador que vive en la Ciudad de Buenos Aires.
-					Me apasionan el diseño y la tecnología, pero también el cine, 
-					los cómics, los videojuegos y la literatura.
-					Si querés conocerme mejor, podés preguntarme...
+				<p>Me gusta entregar los mejores resultados. Mis trabajos hablan de mí y por lo tanto trato a cada proyecto con el mismo nivel de compromiso y responsabilidad, pero también con la misma pasión y deseo de crear algo increíble. Lo que hago me permite combinar mis habilidades para el diseño y el desarrollo, pudiendo expresarme de manera creativa y al mismo tiempo aplicar mi capacidad analítica.
 				</p>
 			</div>	
 		</div>
@@ -49,28 +46,28 @@
 			<div class="levelone skillbox left">
 				<div class="skill skillone">
 					<div class="mask">  
-					<h2>Title</h2>  
-					    <p>Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?</p>  
+					<h2>CREATIVIDAD</h2>  
+					    <p>Busco siempre la forma más creativa de mostrar la información y navegar a través de ella. No temo desafiar lo establecido. Me alimento de todo lo que juego,leo, veo y escucho para desarmarlo, rearmarlo y crear cosas que no se hayan visto antes. Y si alguien ya lo está haciendo, busco la manera de darle el toque de identidad que el cliente necesita.</p>  
 					</div>	
 				</div>
 				<div class="skill skillthree">
 					<div class="mask">  
-					<h2>Title</h2>  
-					    <p>Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?</p>  
+					<h2>ATENCIÓN AL DETALLE</h2>  
+					    <p>Dicen que el buen diseño se nota a simple vista, pero el gran diseño es invisible. Funciona tan bien que es como si no estuviera ahí. Para lograr eso, hace falta revisar los puntos de todas las íes. Nada puede estar fuera de su lugar, ni un pixel de más. Si no es la vía más rápida al éxito, sin dudas es la más segura, porque el secreto del éxito reside en los detalles.</p>  
 					</div>	
 				</div>
 			</div>
 			<div class="levelone skillbox right">
 				<div class="skill skilltwo">
 					<div class="mask">  
-					<h2>Title</h2>  
-					    <p>Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?</p> 
+					<h2>PENSAMIENTO ANALÍTICO</h2>  
+					    <p>Lo más importante para mí es escuchar las necesidades del cliente. Saber qué quiere. Qué espera de su proyecto. Tomo su visión y me pregunto qué es lo que hace falta para llevarla a cabo. Pongo a trabajar los engranajes en mi cabeza para asegurarme de que todo haga lo que debe hacer de la forma más eficiente posible.</p> 
 					</div>		
 				</div>
 				<div class="skill skillfour">
 					<div class="mask">  
-					<h2>Title</h2>  
-					    <p>Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?</p> 
+					<h2>INGENIO</h2>  
+					    <p>Entender cómo funcionan las cosas y entender cómo hacerlas funcionar no alcanza para que un proyecto sea exitoso. Es necesario siempre pensar fuera de la caja, más allá de los límites de nuestras ideas preconcebidas. Veo a cada proyecto como un desafío que requiere de pensamiento lateral para dar todo lo que puede de sí.</p> 
 					</div>		
 				</div>
 			</div>	
@@ -84,24 +81,24 @@
 				<div class="outer">
 					<div class="inner toolone">
 						<div class="mask">  
-						   	<h2>Title</h2>  
-						   	<p>Your Text</p>  
+						   	<h2>LÁPIZ Y PAPEL</h2>  
+						   	<p>Porque lo básico nunca pasa de moda, siempre tengo a mano lápiz y papel para bajar las ideas antes de siquiera prender la computadora.</p>  
 						</div>
 					</div>
 				</div>
 				<div class="outer">
 					<div class="inner tooltwo">
 						<div class="mask">  
-						   	<h2>Title</h2>  
-						   	<p>Your Text</p>  
+						   	<h2>PHOTOSHOP</h2>  
+						   	<p>Cuando todo está en su lugar, es necesario Photoshop para darle la forma final al sitio, y poder verlo antes de ninguna línea de código.</p>  
 						</div>  
 					</div>
 				</div>
 				<div class="outer">
 					<div class="inner toolthree">
 						<div class="mask">  
-						   	<h2>Title</h2>  
-						   	<p>Your Text</p>  
+						   	<h2>PROTOTIPOS</h2>  
+						   	<p>A veces es necesario ver las páginas en acción lo antes posible. Para saber cómo se va a comportar el sitio antes de implementarlo, realizo un prototipo que te ayuda a navegarlo como si ya estuviera en la web</p>  
 						</div>
 					</div>
 				</div>		
@@ -111,24 +108,24 @@
 				<div class="outer">
 					<div class="inner toolone">
 						<div class="mask">  
-						   	<h2>Title</h2>  
-						   	<p>Your Text</p>  
+						   	<h2>HTML5 Y CSS3</h2>  
+						   	<p>Los lenguajes de marcado son la base de todo sitio. Con ellos estructuro lo que van a ver tus visitas y cómo van a verlo para que tengan la mejor experiencia.</p>  
 						</div>
 					</div>
 				</div>
 				<div class="outer">
 					<div class="inner tooltwob">
 						<div class="mask">  
-						   	<h2>Title</h2>  
-						   	<p>Your Text</p>  
+						   	<h2>JAVASCRIPT</h2>  
+						   	<p>Si HTML es el contenido y CSS la forma, Javascript es sin duda alguna el alma de los proyectos, la llama que los anima. A través de sus librerías, puedo conseguir que tu sitio se comporte exactamente como querés.</p>  
 						</div>
 					</div>
 				</div>
 				<div class="outer">
 					<div class="inner toolthree">
 						<div class="mask">  
-						   	<h2>Title</h2>  
-						   	<p>Your Text</p>  
+						   	<h2>PHP, SQL, CMS</h2>  
+						   	<p>Si tu sitio lo necesita, puedo usar PHP para darte nuevas funcionalidades, SQL para crear bases de datos y sitios como Wordpress para gestionar los contenidos.</p>  
 						</div>
 					</div>
 				</div>			
