--- a/pages/what.html
+++ b/pages/what.html
@@ -33,12 +33,9 @@
 			</div>
 		</div>
 		<div class="levelone whobox">
-			<h2>MI NOMBRE ES JONATAN LIPNER...</h2>
+			<h2>DISEÑO Y DESARROLLO A TU MEDIDA</h2>
 			<div class="bodytext">
-				<p>Soy un diseñador y desarrollador que vive en la Ciudad de Buenos Aires.
-					Me apasionan el diseño y la tecnología, pero también el cine, 
-					los cómics, los videojuegos y la literatura.
-					Si querés conocerme mejor, podés preguntarme...
+				<p>El mundo de hoy es cada vez más exigente. No alcanza con que las cosas funcionen: tienen que verse bien. No alcanza con que las cosas se vean bien: tienen que funcionar correctamente. Nada puede quedar librado al azar. La atención al detalle es clave. Por eso te ofrezco una mirada estética y un pensamiento analítico, para que tus proyectos en la web se vean espectaculares y funcionen perfecto. Acá podés ver algunos proyectos que hice realidad.
 				</p>
 			</div>		
 		</div>			
@@ -75,29 +72,55 @@
 			</nav>	
 		</div>			
 		<div class="leveltwo descriptcon">
-			<h2>GIBSON.COM</h2>
-			<div class="descriptimg">
-				<div class="sample">
-					<img class='img selected' data-project='key' src="../img/samples/sites/sitethree.png" alt="Imagen sitio">
-					<img class='img' data-project='bee' src="../img/samples/sites/sitesix.png" alt="Imagen sitio">
-					<img class='img' data-project='crow' src="../img/samples/sites/sitetwo.png" alt="Imagen sitio">
-					<img class='img' data-project='fox' src="../img/samples/sites/sitefour.png" alt="Imagen sitio">
-					<img class='img' data-project='polygon' src="../img/samples/sites/sitefive.png" alt="Imagen sitio">
-				</div>
-				<nav class="sampleviews">
-					<ul>
-						<li class="button selected" data-project='fox'>Vista 1</li>
-						<li class="button" data-project='bee'>Vista 2</li>
-						<li class="button" data-project='crow'>Vista 3</li>
-					</ul>
-				</nav>	
-			</div>
+			<h2 class="title selected" data-project='key'>GIBSON</h2>
+			<h2 class="title" data-project='bee'>HBK</h2>
+			<h2 class="title" data-project='crow'>BAILLER&GROHAM</h2>
+			<h2 class="title" data-project='fox'>MOLINO</h2>
+			<h2 class="title" data-project='polygon'>TREGO TOURING</h2>
 			<div class="descriptbox">
-				<div class="descript">
-					<p>Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?<br>
-
-					The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.</p>
-				</div>	
+				<div class="descriptimg">
+					<div class="sample">
+						<img class='img selected' data-project='key' data-view='first' src="../img/samples/sites/sitethree.png" alt="Imagen sitio">
+						<!--<img class='img' data-project='key' data-view='second' src="../img/samples/sites/sitethreeb.png" alt="Imagen sitio">
+						<img class='img' data-project='key' data-view='third' src="../img/samples/sites/sitethreec.png" alt="Imagen sitio">-->
+						<img class='img' data-project='bee' data-view='first' src="../img/samples/sites/sitesix.png" alt="Imagen sitio">
+						<!--<img class='img' data-project='bee' data-view='second' src="../img/samples/sites/sitesixb.png" alt="Imagen sitio">
+						<img class='img' data-project='bee' data-view='third' src="../img/samples/sites/sitesixc.png" alt="Imagen sitio">-->
+						<img class='img' data-project='crow' data-view='first' src="../img/samples/sites/sitetwo.png" alt="Imagen sitio">
+						<!--<img class='img' data-project='crow' data-view='second' src="../img/samples/sites/sitetwob.png" alt="Imagen sitio">
+						<img class='img' data-project='crow' data-view='third' src="../img/samples/sites/sitetwoc.png" alt="Imagen sitio">-->
+						<img class='img' data-project='fox' data-view='first' src="../img/samples/sites/sitefour.png" alt="Imagen sitio">
+						<!--<img class='img' data-project='fox' data-view='second' src="../img/samples/sites/sitefourb.png" alt="Imagen sitio">
+						<img class='img' data-project='fox' data-view='third' src="../img/samples/sites/sitefourc.png" alt="Imagen sitio">-->
+						<img class='img' data-project='polygon' data-view='first' src="../img/samples/	sites/sitefive.png" alt="Imagen sitio">
+						<!--<img class='img' data-project='polygon' data-view='second' src="../img/samples/	sites/sitefiveb.png" alt="Imagen sitio">
+						<img class='img' data-project='polygon' data-view='third' src="../img/samples/	sites/sitefivec.png" alt="Imagen sitio">-->
+					</div>
+					<!--<nav class="sampleviews">
+						<ul>
+							<li class="view selected" data-view='first'>Vista 1</li>
+							<li class="view" data-view='second'>Vista 2</li>
+							<li class="view" data-view='third'>Vista 3</li>
+						</ul>
+					</nav>-->
+				</div>
+				<div class="descripttext">
+					<div class="descript selected" data-project='key'>
+						<p>Sitio del artista Roney Gibson. Es un portfolio con sus trabajos, las exhibiciones que actualmente está realizando, su blog y un formulario para contactarlo.</p>
+					</div>
+					<div class="descript" data-project='bee'>
+						<p>Sitio de la empresa HBK. Presenta información sobre la agencia, sus trabajos, los servicios que brinda e información de contacto.</p>
+					</div>
+					<div class="descript" data-project='crow'>
+						<p>Sitio de los viñedos Baille. En él se puede encontrar la historia de los viñedos, los próximos eventos a realizar, postularse para catar, comprar regalos y conocer a los curadores.</p>
+					</div>
+					<div class="descript" data-project='fox'>
+						<p>Sitio de la pastelería Molino. Se puede visitar su menú, una galería de imágenes, la cultura de la empresa, los próximos eventos, solicitar servicio de catering y obtener información para visitar las instalaciones.</p>
+					</div>
+					<div class="descript" data-project='polygon'>
+						<p>Sitio de la empresa de turismo Trego Touring. Permite obtener información de los tours vigentes, conocer los países que se pueden visitar, estar al día con los eventos y conocer y dejar reviews sobre las experiencias vividas con la empresa.</p>
+					</div>	
+				</div>
 			</div>
 		</div>
 		<div class="levelone wherecon">
