--- a/pages/where.html
+++ b/pages/where.html
@@ -32,7 +32,14 @@
 				</div>
 			</div>
 		</div>
-		<div class="levelone formcon">
+		<div class="levelone whobox">
+			<h2>ACÁ ESTOY PARA REALIZAR TUS PROYECTOS</h2>
+			<div class="bodytext">
+				<p>Podés confiar en que lo que imaginaste se va a hacer realidad. Simplemente dejame un mensaje para que nos pongamos en contacto y saquemos tu proyecto adelante.
+				</p>
+			</div>		
+		</div>	
+		<div class="leveltwo formcon">
 			<h2>TU MENSAJE</h2>
 			<div class="formbox">
 				<form action="received.html" method="post">
@@ -41,7 +48,7 @@
 						<input type="text" name="name" value="Tu nombre o el nombre de la empresa"/>
 					</div>	
 					<div class="writeremail right">
-						<p>¿Adónde tengo que contestar?</p>
+						<p>¿A que dirección tengo que contestar?</p>
 						<input type="email" name="email" value="ejemplo@tumail.com">
 					</div>
 					<div class="themessage left">
