--- a/pages/who.html
+++ b/pages/who.html
@@ -40,7 +40,11 @@
 				</div>				
 			</div>
 			<div class="bio right">
-				<p>Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?
+				<p>Mi nombre es Jonatan Lipner y nací en Argentina en 1990. Soy diseñador y desarrollador web.<br>
+
+				<br>Me apasionan la tecnología, los videojuegos, el cine, los cómics y la literatura. Incursiono en todos los medios que me permitan plasmar mi imaginación y mi capacidad de resolución de problemas. Se podría decir que soy una persona creativa por naturaleza.<br>
+
+				<br>Estoy constantemente desafiándome a superar mis límites y a descubrir nuevas formas de hacer realidad lo que quiero. En un mundo que evoluciona cada vez más rápido, no hay que perderle el ritmo al avance de la tecnología.
 				</p>
 			</div>	
 		</div>
@@ -51,17 +55,17 @@
 					<ul>
 						<li>
 							<div class="facts">
-								<p>The path of the righteous</p>
+								<p>Funciono con mate</p>
 							</div>
 						</li>
 						<li>
 							<div class="facts">
-								<p>The path of the righteous</p>
+								<p>Aspirante a Linterna Verde</p>
 							</div>
 						</li>
 						<li>
 							<div class="facts">
-								<p>The path of the righteous</p>
+								<p>Bailo como John Travolta</p>
 							</div>
 						</li>
 					</ul>
@@ -70,31 +74,17 @@
 					<ul>
 						<li>
 							<div class="facts">
-								<p>The path of the righteous</p>
+								<p>Me encanta El planeta del tesoro</p>
 							</div>
 						</li>
 						<li>
 							<div class="facts">
-								<p>The path of the righteous</p>
+								<p>Podría haber sido un hobbit</p>
 							</div>
 						</li>
 						<li>
 							<div class="facts">
-								<p>The path of the righteous</p>
-							</div>
-						</li>
-					</ul>
-				</nav>
-				<nav class="mobifunfacts">
-					<ul>
-						<li>
-							<div class="facts">
-								<p>The path of the righteous</p>
-							</div>
-						</li>
-						<li>
-							<div class="facts">
-								<p>The path of the righteous</p>
+								<p>Mi chica me gana al Mortal Kombat</p>
 							</div>
 						</li>
 					</ul>
@@ -103,12 +93,12 @@
 					<ul>
 						<li>
 							<div class="facts">
-								<p>The path of the righteous</p>
+								<p>Funciono con mate</p>
 							</div>
 						</li>
 						<li>
 							<div class="facts">
-								<p>The path of the righteous</p>
+								<p>Aspirante a Linterna Verde</p>
 							</div>
 						</li>
 					</ul>
@@ -117,12 +107,26 @@
 					<ul>
 						<li>
 							<div class="facts">
-								<p>The path of the righteous</p>
+								<p>Bailo como John Travolta</p>
 							</div>
 						</li>
 						<li>
 							<div class="facts">
-								<p>The path of the righteous</p>
+								<p>Me encanta El planeta del tesoro</p>
+							</div>
+						</li>
+					</ul>
+				</nav>
+				<nav class="mobifunfacts">
+					<ul>
+						<li>
+							<div class="facts">
+								<p>Podría haber sido un hobbit</p>
+							</div>
+						</li>
+						<li>
+							<div class="facts">
+								<p>Mi chica me gana al Mortal Kombat</p>
 							</div>
 						</li>
 					</ul>
@@ -135,67 +139,84 @@
 				<div class="date">
 					<p>2007</p>
 				</div>
-				<div class="hit">
-					<p>Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?
-
-					The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.</p>
+				<div class="hit" id="hitone">
+					<div class="hittitle">
+						<h3>Mi primer libro...</h3>
+						<img src="../img/who/arrow.png">
+					</div>
+					<div class="hittext">
+						<p>A los 17 años conseguí los dos primeros logros de mi vida: por un lado, fue publicado mi primer libro de cuentos, y por el otro, completé mi primera novela. Ambos hechos me demostraron a mí mismo que podía lograr lo que me propusiera y fueron un ejercicio de disciplina aplicada a la imaginación para crear algo valioso.</p>
+					</div>	
 				</div>
 			</div>
 			<div class="hitbox">
 				<div class="date">
 					<p>2008</p>
 				</div>
-				<div class="hit">
-					<p>Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?
-					</p>
+				<div class="hit" id="hittwo">
+					<div class="hittitle">
+						<h3>Probando la autoedición...</h3>
+						<img src="../img/who/arrow.png">
+					</div>
+					<div class="hittext">
+						<p>Un año después de escribir mi primera novela decidí intentar autopublicarla. Así fue como empecé un proceso de aprendizaje relacionado con la edición y todo lo que incluye: el diseño, la diagramación y la impresión.</p>
+					</div>
 				</div>
 			</div>
 			<div class="hitbox">
 				<div class="date">
 					<p>2012</p>
 				</div>
-				<div class="hit">
-					<p>Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?
-
-					The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will</p>
+				<div class="hit" id="hitthree">
+					<div class="hittitle">
+						<h3>Mi primera revista...</h3>
+						<img src="../img/who/arrow.png">
+					</div>
+					<div class="hittext">
+						<p>A los 22 años, después de haber editado varios libros propios y ajenos, cumplí un objetivo que tenía desde hacía varios años y lancé mi primera revista cultural. Todavía no me encargaba del diseño gráfico, pero cada vez me interesaba más ese aspecto.</p>
+					</div>
 				</div>
 			</div>
 			<div class="hitbox">
 				<div class="date">
 					<p>2013</p>
 				</div>
-				<div class="hit">
-					<p>Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?
-
-					The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children.</p>
+				<div class="hit" id="hitfour">
+					<div class="hittitle">
+						<h3>Dominando las herramientas gráficas...</h3>
+						<img src="../img/who/arrow.png">
+					</div>
+					<div class="hittext">
+						<p>La experiencia de mi primera revista me llevó, al año siguiente, a ponerme tras la computadora para, además de dirigir, realizar todo el diseño gráfico de mi siguiente proyecto editorial. A las herramientas básicas de maquetación que había usado hasta el momento le sumé un cada vez mayor manejo del paquete Adobe.</p>
+					</div>
 				</div>
 			</div>
 			<div class="hitbox">
 				<div class="date">
 					<p>2015</p>
 				</div>
-				<div class="hit">
-					<p>Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?
-
-					The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men.</p>
+				<div class="hit" id="hitfive">
+					<div class="hittitle">
+						<h3>Mi primera startup...</h3>
+						<img src="../img/who/arrow.png">
+					</div>
+					<div class="hittext">
+						<p>Al llegar a los 25 se me ocurrió que lo que había aprendido sobre edición podía funcionar en una escala mayor y por eso me atreví a formar mi primera startup con unos amigos. Hasta ese momento nunca había programado, por lo que me busqué un equipo de desarrolladores para ayudarme con el proyecto.</p>
+					</div>
 				</div>
 			</div>
 			<div class="hitbox">
 				<div class="date">
 					<p>2016</p>
 				</div>
-				<div class="hit">
-					<p>Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?</p>
-				</div>
-			</div>
-			<div class="hitbox">
-				<div class="date">
-					<p>2017</p>
-				</div>
-				<div class="hit">
-					<p>Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?
-
-					The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will</p>
+				<div class="hit" id="hitsix">
+					<div class="hittitle">
+						<h3>Descifrando el código...</h3>
+						<img src="../img/who/arrow.png">
+					</div>
+					<div class="hittext">
+						<p>La experiencia de la startup me permitió ver todo el potencial que había en el conocimiento del desarrollo web, porque lo que al año siguiente empecé a prepararme de manera autodidacta. Así fui introduciéndome en el mundo del desarrollo a partir de las herramientas más básicas, hasta ir conociendo las últimas tecnologías.</p>
+					</div>
 				</div>
 			</div>	
 		</div>
